# effective-advocacy-project

./: .gitignore  README.md  RUN_LOCALLY.md  cosine_similarity_demo.py  investigate_keywords_vs_narrativeframing.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml  tests.yml
apps/: __init__.py
apps/actors_claims/: __init__.py  config.example.yaml  config.py  report.py  run.py
apps/claim_supporting/: __init__.py  app.py  run.py
apps/finding_document_matching/: __init__.py  run.py
apps/narrative_framing/: __init__.py  aggregates.py  aggregation.py  aggregation_document.py  aggregation_domain.py  aggregation_temporal.py  config.example.yaml  config.py  config.test.yaml  filtering.py  plots.py  report.py  run.py
apps/old/: coal_overcapacity_analysis.py
apps/word_count/: __init__.py  config.py  report.py  run.py
apps/word_occurrence/: __init__.py  app.py  run.py
configs/air_quality/: Bangladesh.yaml  China.yaml  India.yaml  Indonesia.yaml  Pakistan.yaml  South_Africa.yaml
configs/manifesto/: template.yaml
configs/mediacloud/: mediacloud_canada_meat.yaml  mediacloud_india_coal.yaml  mediacloud_indonesia_airquality.yaml  mediacloud_meat_canada.yaml  mediacloud_southafrica_airquality.yaml  template.yaml
configs/narrative_framing/: manifesto_europe_animalwelfare.yaml
configs/youtube/: template.yaml
demo/: document_matcher_demo.py
docs/: Gemfile  _config.yml  index.html  index.md
docs/_includes/: footer.html  head.html  javascripts.html
docs/_layouts/: default.html  post.html
docs/_posts/: 2024-10-15-narrative-framing-analysis.md
docs/css/: main.sass  print.css
docs/posts/: narrative_framing.md
efi_analyser/: __init__.py  aggregators.py  document_matching_pipeline.py  filters.py  pipeline.py  processors.py  report_generator.py  types.py  utils.py
efi_analyser/actors_claims/: __init__.py  hf_impl.py  protocols.py  simple_impl.py  spacy_impl.py  types.py
efi_analyser/apps/: __init__.py  claim_supporting.py  finding_document_matcher.py  finding_document_matching.py  test_cosine_demo.py  word_occurrence.py
efi_analyser/chunkers/: __init__.py  sentence_chunker.py  text_chunker.py
efi_analyser/demos/: retriever_demo.py
efi_analyser/embedders/: __init__.py  sentence_transformer_embedder.py
efi_analyser/frames/: __init__.py  annotator.py  applicator.py  corpora.py  identifiers.py  induction.py  types.py
efi_analyser/index/: __init__.py  numpy_scan.py
efi_analyser/pipeline/: __init__.py  base.py  claim_supporting.py  finding_document_matching.py  linear.py  word_occurrence.py
efi_analyser/report_generator/: __init__.py  base.py  claim_supporting.py  document_matching.py  finding_document_matching.py  validation.py  word_occurrence.py
efi_analyser/rescorers/: __init__.py  cross_encoder_rescorer.py  ensemble_rescorer.py  llama_rescorer.py  llm_rescorer.py  nli_openai_scorer.py  nli_rescorer.py  ollama_rescorer.py  openai_interface.py  stance_llm_scorer.py  stance_openai_scorer.py
efi_analyser/scorers/: __init__.py  ensemble_rescorer.py  llm_scorer.py  nli_hf_scorer.py  nli_llm_scorer.py  nli_openai_scorer.py  nli_scorer.py  ollama_interface.py  openai_interface.py  stance_hf_scorer.py  stance_llm_scorer.py  stance_openai_scorer.py  stance_scorer.py  tata_scorer.py
efi_analyser/tests/: __init__.py  conftest.py  test_actors_claims.py  test_aggregators.py  test_chunkers.py  test_embedded_corpus.py  test_embedded_library.py  test_filters.py  test_frame_annotator.py  test_frame_applicator.py  test_frame_classifier_dataset.py  test_frame_classifier_pipeline.py  test_frame_classifier_sampling.py  test_frame_classifier_trainer.py  test_frame_induction.py  test_frame_induction_ollama.py  test_hf_actors_claims.py  test_llm_rescorer.py  test_nli_rescorer.py  test_nli_scorer.py  test_ollama_rescorer_integration.py  test_pipeline.py  test_processors.py  test_sampler_date_from.py  test_sentence_chunker.py  test_spacy_actors_claims.py  test_stance_scorer.py  test_text_chunker.py
efi_analyser/training/: __init__.py
efi_analyser/validation/: __init__.py  datasets.py  evaluator.py  metrics.py  runner.py  types.py
efi_core/: __init__.py  layout.py  protocols.py  types.py  utils.py
efi_core/retrieval/: __init__.py  index_builder.py  retriever.py  retriever_brute_force.py  (+1 more)
efi_corpus/: __init__.py  build_controller.py  corpus_handle.py  corpus_interface.py  corpus_reader.py  fetcher.py  index_persist.py  indexes.py  layout.py  manager.py  mediacloud_cache.py  rate_limiter.py  states.py  stores.py  text_extractor.py  types.py  utils.py
efi_findings/: __init__.py  library_builder.py  library_reader.py  rate_limiter.py  types.py  url_processor.py
efi_library/: __init__.py  example.py  library_builder.py  library_handle.py  library_store.py  types.py  url_processor.py  utils.py
examples/: app_occurence.py  claim_supporting_example.py  coal_overcapacity_analysis.py  document_matcher_india.py  document_matching_example.py  finding_document_matching.py  word_occurrence_example.py
scripts/: build_corpora.py  build_embedded_corpora.py  build_embedded_libraries.py  build_libraries.py  coal_overcapacity_analysis.py  validate_scorers.py
tests/: test_corpus_handle.py  test_fetcher.py  test_mediacloud_builder.py
(+118 files in other folders)
