[tool.poetry]
name = "efi-corpus"
version = "0.1.0"
description = "EFI Corpus Building and Analysis Tools"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "efi_core"},
    {include = "efi_corpus"},
    {include = "efi_analyser"},
    {include = "efi_library"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "^2.31.0"
zstandard = "^0.22.0"
newspaper3k = "^0.2.8"
beautifulsoup4 = "^4.12.0"
mediacloud = "^4.0.0"
pyyaml = "^6.0.1"
openai = "^1.0.0"
PyPDF2 = "3.0.1"
python-dotenv = "^1.1.1"
tqdm = "^4.66.0"
numpy = "1.26.4"
faiss-cpu = "<1.8.0"
pytest = "^8.4.1"
sentence-transformers = "^2.2.0"
python-decouple = "^3.8"
pandas = "^2.3.2"
reportlab = "^4.4.3"
youtube-transcript-api = "^1.2.2"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
scikit-learn = "^1.3.0"
numpy = ">=1.26.4,<3.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "llm: marks tests that require LLM access",
    "skip_ci: marks tests to skip in CI/CD",
]
testpaths = ["efi_analyser/tests", "efi_corpus/tests", "efi_library/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.poetry.scripts]
test = "pytest"
test-no-llm = "pytest -m 'not llm'"
test-llm-only = "pytest -m 'llm'"
test-no-integration = "pytest -m 'not integration'"
test-fast = "pytest -m 'not slow'"
validate-scorers = "python scripts/validate_scorers.py"

